--- a/index.html
+++ b/index.html
@@ -97,14 +97,11 @@
             <div id="sack-animation">
                 <div class="sack">🎅</div>
             </div>
-            <p class="win-text">Santa's Sack reveals your reward...</p>
-            <div id="win-code">
-                <span class="code-digit">0</span>
-                <span class="code-digit">3</span>
-                <span class="code-digit">2</span>
-                <span class="code-digit">6</span>
+            <p class="win-text">You found Santa's Sack!</p>
+            <div id="final-time-container">
+                <p class="time-label">Your Time:</p>
+                <div id="final-time">0:00</div>
             </div>
-            <p class="code-hint">Use this code for your next adventure!</p>
             <button id="play-again-btn" class="start-button">PLAY AGAIN</button>
         </div>
     </div>
