Replace Santa's sack emoji with pixel art version
Updated the visual representation of Santa's sack in the win screen and raycaster corridor to use a custom pixel art style instead of an emoji. Added CSS for pixel art rendering, updated HTML to use the new element, and refactored raycaster.js to draw the sack as pixel art with a matching palette and effects.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="win-content">
             <h1>🎄 YOU MADE IT! 🎄</h1>
             <div id="sack-animation">
-                <div class="sack">🎅</div>
+                <div class="pixel-sack"></div>
             </div>
             <p class="win-text">You found Santa's Sack!</p>
             <div id="final-time-container">
