Integrate JsBarcode for receipt barcode generation
Added JsBarcode library via CDN in index.html and updated receipt-printer.js to generate barcode SVGs directly when printing receipts. Enhanced error handling and debug logging to ensure barcode generation only occurs if the library is loaded, with fallbacks if unavailable or errors occur.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <!-- Google Font for festive feel -->
     <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <!-- Barcode Generator Library -->
+    <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.6/dist/JsBarcode.all.min.js"></script>
 </head>
 <body>
     <!-- Start Screen -->
